[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anomalyAE"
version = "0.1.0"
description = "autoencoder based anomaly detection research library"
readme = "README.md"
authors = [
    { name = "jayarnim", email = "jayarnim727@email.com" }
]
urls = { Homepage = "https://github.com/jayarnim/pkg-anomaly-ae" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]